[gd_scene load_steps=25 format=3 uid="uid://htko3fmf4lx"]

[ext_resource type="PackedScene" uid="uid://o3xlpnn0p5jc" path="res://player/player.tscn" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://cagfg4r64utkf" path="res://main.gd" id="1_lquwl"]
[ext_resource type="PackedScene" uid="uid://cafk8kq5sd4bj" path="res://Inventory/inventory.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://dhcnbc4ihkjf1" path="res://Interactible/environment.tscn" id="2_2cqfq"]
[ext_resource type="Resource" uid="uid://fmixtro1fw35" path="res://test_inv.tres" id="3_7mycd"]
[ext_resource type="Script" uid="uid://bcbbxn13vsa04" path="res://Inventory/inventory_interface.gd" id="4_272bh"]
[ext_resource type="Script" uid="uid://bljhe1c2w1b05" path="res://Inventory/inventory_data_equip.gd" id="4_vivmo"]
[ext_resource type="PackedScene" uid="uid://b8divgs3bbhau" path="res://Inventory/slot.tscn" id="6_7mycd"]
[ext_resource type="PackedScene" uid="uid://lw4n16p1k01c" path="res://Interactible/chest.tscn" id="7_272bh"]
[ext_resource type="PackedScene" uid="uid://7bhqpxe52gh2" path="res://Inventory/hot_bar_inventory.tscn" id="7_ycdy4"]
[ext_resource type="Script" uid="uid://bvc24gsph445s" path="res://Inventory/inventory_data.gd" id="8_4c57u"]
[ext_resource type="Script" uid="uid://ck5ypg4lwv2hm" path="res://Inventory/hot_bar_inventory.gd" id="8_w48qg"]
[ext_resource type="Script" uid="uid://lk3uo1h4ww3n" path="res://Inventory/slot_data.gd" id="9_efxa6"]
[ext_resource type="Resource" uid="uid://bjflc28v6fiv5" path="res://item/items/book.tres" id="10_dg77c"]
[ext_resource type="PackedScene" uid="uid://bgixhf8w3r8rq" path="res://item/pick_up/pick_up.tscn" id="11_efxa6"]
[ext_resource type="Resource" uid="uid://caddf5vymcjk7" path="res://item/items/apple.tres" id="12_dg77c"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7dm0k"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_ig7tw"]
sky_material = SubResource("ProceduralSkyMaterial_7dm0k")

[sub_resource type="Environment" id="Environment_0xm2m"]
background_mode = 2
sky = SubResource("Sky_ig7tw")
tonemap_mode = 2

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_1bvp3"]
data = PackedVector3Array(10, 0, 10, -10, 0, 10, 10, 0, -10, -10, 0, 10, -10, 0, -10, 10, 0, -10)

[sub_resource type="Resource" id="Resource_2cqfq"]
script = ExtResource("4_vivmo")
slot_datas = Array[ExtResource("9_efxa6")]([null])
metadata/_custom_type_script = "uid://bljhe1c2w1b05"

[sub_resource type="Resource" id="Resource_4c57u"]
script = ExtResource("9_efxa6")
item_data = ExtResource("10_dg77c")
quantity = 1
metadata/_custom_type_script = "uid://lk3uo1h4ww3n"

[sub_resource type="Resource" id="Resource_efxa6"]
script = ExtResource("8_4c57u")
slot_datas = Array[ExtResource("9_efxa6")]([SubResource("Resource_4c57u"), null, null, null, null])
metadata/_custom_type_script = "uid://bvc24gsph445s"

[sub_resource type="Resource" id="Resource_dg77c"]
script = ExtResource("9_efxa6")
item_data = ExtResource("12_dg77c")
quantity = 5
metadata/_custom_type_script = "uid://lk3uo1h4ww3n"

[node name="Main" type="Node"]
script = ExtResource("1_lquwl")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0xm2m")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Ground" type="MeshInstance3D" parent="."]

[node name="Environment" parent="Ground" instance=ExtResource("2_2cqfq")]

[node name="StaticBody3D" type="StaticBody3D" parent="Ground/Environment"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/Environment/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_1bvp3")

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.604863, 0.367996, 3.21008)
inventory_data = ExtResource("3_7mycd")
equip_inventory_data = SubResource("Resource_2cqfq")

[node name="UI" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_272bh")

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("2_0xm2m")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0

[node name="EquipInventory" parent="UI/InventoryInterface" instance=ExtResource("2_0xm2m")]
layout_mode = 0
offset_left = 450.0
offset_top = 10.0
offset_right = 490.0
offset_bottom = 50.0

[node name="ExternalInventory" parent="UI/InventoryInterface" instance=ExtResource("2_0xm2m")]
visible = false
layout_mode = 0
offset_left = 771.0
offset_top = 174.0
offset_right = 811.0
offset_bottom = 214.0

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource("6_7mycd")]
visible = false
modulate = Color(1, 1, 1, 0.498039)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="HotBarInventory" parent="UI" instance=ExtResource("7_ycdy4")]
visible = false
offset_left = 10.0
offset_top = 10.0
offset_right = 430.0
offset_bottom = 90.0
script = ExtResource("8_w48qg")

[node name="Chest" parent="." instance=ExtResource("7_272bh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00125051, -4.36136)
inventory_data = SubResource("Resource_efxa6")

[node name="PickUp" parent="." instance=ExtResource("11_efxa6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.492198, 1.72544, -3.69852)
slot_data = SubResource("Resource_dg77c")

[connection signal="drop_slot_data" from="UI/InventoryInterface" to="." method="_on_inventory_interface_drop_slot_data"]
[connection signal="gui_input" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_gui_input"]
[connection signal="visibility_changed" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_visibility_changed"]
